--- a/desenvolvimento/style.css
+++ b/desenvolvimento/style.css
@@ -12,6 +12,32 @@ body{
     
 }
 
+.nome{
+    text-decoration: none;
+    color: white;
+    padding: 20px;
+    position: relative;
+    top: 18px;
+    
+}
+
+.nome:hover{
+   
+    border-radius: 50px;
+    color: black;
+    
+    
+}
+
+.linguagens{
+    width: 10%;
+    position: relative;
+    left: 40px;
+    margin-left: 160px;
+    background-color: rgb(252, 247, 247);
+    border-radius: 20px;
+}
+
 div #menu{
     background: rgba(0, 0, 0, 0.152);
     border: 1px solid rgba(0, 0, 0, 0.152);
